--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.76.0",
     "scroll-sync-react": "^1.2.0",
     "scrollmirror": "^0.1.0"
   },
@@ -27,6 +26,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/sass": "^1.45.0",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.1.3"
   }
