--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "scroll-sync-react": "^1.2.0",
+    "react-leader-line": "^1.0.5",
+    "react-xarrows": "^2.0.2",
     "scrollmirror": "^0.1.0"
   },
   "devDependencies": {
