--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-virtual": "^3.5.0",
     "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
+    "re-resizable": "^6.9.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
