--- a/package.json
+++ b/package.json
@@ -16,14 +16,10 @@
     "@tanstack/react-virtual": "^3.5.0",
     "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
-    "re-resizable": "^6.9.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6",
-    "react-leader-line": "^1.0.5",
-    "react-xarrows": "^2.0.2",
     "reactflow": "^11.11.3",
-    "scrollmirror": "^0.1.0"
+    "sass": "^1.77.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.1",
