--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@radix-ui/themes": "^3.0.2",
     "@tanstack/react-table": "^8.7.9",
     "@tanstack/react-virtual": "^3.5.0",
+    "antd": "^5.17.2",
     "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
+    "re-resizable": "^6.9.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.11.3",
-    "sass": "^1.77.1"
+    "sass": "^1.77.1",
+    "scroll-sync-react": "^1.2.0",
+    "scrollmirror": "^0.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.1",
